# trade-edge

./: Cargo.toml  Makefile
bot/: Cargo.toml
bot/src/: main.rs  strategy.rs  strategy_ext.rs
contract/: foundry.toml
contract/src/: Contract.sol  IContract.sol
core/: Cargo.toml
core/abi/: IContract.json
core/src/: lib.rs
server/: Cargo.toml  config.toml
server/src/: main.rs  routes.rs  state.rs
tui/: Cargo.toml
tui/src/: animation.rs  app.rs  main.rs  sse.rs  ui.rs
