[package]
name = "trade-edge-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
trade-edge-core = { workspace = true }

clap         = { workspace = true }
crossterm    = { workspace = true }
futures      = { workspace = true }
ratatui      = { workspace = true }
reqwest      = { workspace = true, features = ["stream"] }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
